/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.ProcessManager.Abstractions.Contracts";

message EnqueueMessagesDto {
  string orchestration_name = 1; // The name of the orchestration to enqueue messages for.
  int32 orchestration_version = 2; // The version of the orchestration to enqueue messages for.
  string enqueued_by_actor_id = 4; // The actor id who wants to enqueue messages
  string json_input = 3; // The enqueue messages input serialized as a JSON
  optional string message_type = 5; // Optional message type that describes the type of messages to enqueue (examples could be "Accepted" or "Rejected")
}
